--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,16 @@
 {
+  "parser": "babel-eslint",
+  "env": {
+    "browser": true,
+    "node": true
+  },
   "extends": "airbnb",
-  "parser": "babel-eslint"
+  "rules": {
+    "max-len": 0,
+    "comma-dangle": 0,
+    "new-cap": 0,
+    "react/prop-types": 0,
+    "react/prefer-stateless-function": 0,
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+  }
 }
