--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "draft-js": "^0.7.0",
+    "draft-js-dnd-plugin": "^1.0.7",
+    "draft-js-plugins-editor": "^1.1.0",
+    "draft-js-toolbar-plugin": "^1.0.5",
     "react": "^15.3.0",
     "react-addons-css-transition-group": "^15.3.0",
     "react-addons-update": "^15.3.0",
