--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "draft-js": "^0.7.0",
+    "draft-js-cleanup-empty-plugin": "^1.0.2",
     "draft-js-dnd-plugin": "^1.0.7",
     "draft-js-plugins-editor": "^1.1.0",
     "draft-js-toolbar-plugin": "^1.0.5",
