--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
     "eslint": "^3.2.2",
     "eslint-config-airbnb": "^10.0.0",
@@ -33,7 +34,9 @@
     "draft-js": "^0.7.0",
     "draft-js-cleanup-empty-plugin": "^1.0.2",
     "draft-js-dnd-plugin": "^1.0.7",
-    "draft-js-plugins-editor": "^1.1.0",
+    "draft-js-entity-props-plugin": "^1.0.2",
+    "draft-js-plugins-editor": "^2.0.0-beta.2",
+    "draft-js-plugins-editor-wysiwyg": "^1.0.3",
     "draft-js-toolbar-plugin": "^1.0.5",
     "react": "^15.3.0",
     "react-addons-css-transition-group": "^15.3.0",
