--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
   },
   "dependencies": {
     "draft-js": "^0.7.0",
+    "draft-js-alignment-plugin": "^1.0.3",
     "draft-js-cleanup-empty-plugin": "^1.0.2",
     "draft-js-dnd-plugin": "^1.0.7",
     "draft-js-entity-props-plugin": "^1.0.2",
+    "draft-js-focus-plugin": "^1.0.12",
     "draft-js-plugins-editor": "^2.0.0-beta.2",
     "draft-js-plugins-editor-wysiwyg": "^1.0.3",
     "draft-js-toolbar-plugin": "^1.0.5",
