--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "draft-js-plugins-editor": "^2.0.0-beta.2",
     "draft-js-plugins-editor-wysiwyg": "^1.0.3",
     "draft-js-toolbar-plugin": "^1.0.5",
+    "katex": "^0.6.0",
     "react": "^15.3.0",
     "react-addons-css-transition-group": "^15.3.0",
     "react-addons-update": "^15.3.0",
