--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
     "max-len": 0,
     "comma-dangle": 0,
     "new-cap": 0,
+    "no-underscore-dangle": 0,
     "react/prop-types": 0,
     "react/prefer-stateless-function": 0,
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
